client/styles/device_label.css
@import 'vars.css';

/* Desktop */
@media (min-width: 980px) { 
    p#desktop{
        visibility: visible;
        opacity: 0;
        position: fixed;
        right: 0;
        top: 0;

        margin: 3px;

        font-size: 20px; 
        font-size: 2vh; 

        -webkit-animation: fadeout 3s linear forwards;
        animation: fadeout 3s linear forwards;
    }

    p#tablet{
        opacity: 0;
        position: fixed;
        right: 0;
        top: 0;
    }

    p#smartphone{
        opacity: 0;
        position: fixed;
        right: 0;
        top: 0;
    }
}

/* Tablet landscape */
@media (min-width: 768px) and (max-width: 979px) {  
    p#desktop{
        opacity: 0;
        position: fixed;
        right: 0;
        top: 0;
    }

    p#tablet{
        opacity: 0;
        visibility: visible;
        position: fixed;
        right: 0;
        top: 0;

        margin: 3px;

        font-size: 20px; 
        font-size: 2vh; 

        -webkit-animation: fadeout 3s linear forwards;
        animation: fadeout 3s linear forwards;
    }

    p#smartphone{
        opacity: 0;
        position: fixed;
        right: 0;
        top: 0;
    }
}

/* Landscape phone to portrait tablet */
@media (max-width: 768px) {
    p#desktop{
        opacity: 0;
        position: fixed;
        right: 0;
        top: 0;
    }

    p#tablet{
        opacity: 0;
        position: fixed;
        right: 0;
        top: 0;
    }

    p#smartphone{
        visibility: visible;
        opacity: 0;
        position: fixed;
        right: 0;
        top: 0;

        margin: 3px;

        font-size: 20px; 
        font-size: 2vh; 

        -webkit-animation: fadeout 3s linear forwards;
        animation: fadeout 3s linear forwards;
    } 
}

@-webkit-keyframes fadeout {
    from { opacity: 1; }
    to { opacity: 0; }
}

@keyframes fadeout {
    from { opacity: 1; }
    to { opacity: 0; }
}

